--- a/en.lproj/MainMenu.xib
+++ b/en.lproj/MainMenu.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1080" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5053"/>
     </dependencies>
     <objects>
@@ -374,7 +375,7 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="751" height="344"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <view wantsLayer="YES" horizontalHuggingPriority="249" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="Ovp-zj-tQH" customClass="MBMessagesDesktopView">
+                                                                <view wantsLayer="YES" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="Ovp-zj-tQH" customClass="MBMessagesDesktopView">
                                                                     <rect key="frame" x="0.0" y="0.0" width="751" height="344"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <userDefinedRuntimeAttributes>
@@ -390,10 +391,10 @@
                                                             <constraints>
                                                                 <constraint firstItem="Ovp-zj-tQH" firstAttribute="top" secondItem="5k9-DR-QWV" secondAttribute="top" id="eb3-fw-MHM"/>
                                                                 <constraint firstAttribute="bottom" secondItem="Ovp-zj-tQH" secondAttribute="bottom" priority="200" id="jq7-Uh-xU2"/>
-                                                                <constraint firstAttribute="trailing" secondItem="Ovp-zj-tQH" secondAttribute="trailing" priority="538" id="mfS-Fo-ANX"/>
+                                                                <constraint firstAttribute="trailing" secondItem="Ovp-zj-tQH" secondAttribute="trailing" priority="200" id="mfS-Fo-ANX"/>
                                                                 <constraint firstItem="Ovp-zj-tQH" firstAttribute="leading" secondItem="5k9-DR-QWV" secondAttribute="leading" id="z5Q-Zl-mll"/>
                                                             </constraints>
-                                                            <color key="backgroundColor" patternImage="0D2771D9-3013-4633-969B-31302AFE7AFA" colorSpace="pattern"/>
+                                                            <color key="backgroundColor" patternImage="ED5E0E41-9B35-41DE-BD04-465F0A66E9DB" colorSpace="pattern"/>
                                                         </clipView>
                                                         <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="fzv-cM-tBI">
                                                             <rect key="frame" x="0.0" y="328" width="751" height="16"/>
@@ -406,9 +407,8 @@
                                                     </scrollView>
                                                 </subviews>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="400" id="0rj-lT-R7l"/>
                                                     <constraint firstAttribute="bottom" secondItem="jbs-sY-zqu" secondAttribute="bottom" id="BBH-Eg-jhX"/>
-                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="800" id="EBO-Fp-37F"/>
+                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="1800" id="EBO-Fp-37F"/>
                                                     <constraint firstItem="jbs-sY-zqu" firstAttribute="top" secondItem="1082" secondAttribute="top" id="aOW-dk-RFG"/>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="nxX-zL-WQb"/>
                                                     <constraint firstItem="jbs-sY-zqu" firstAttribute="leading" secondItem="1082" secondAttribute="leading" id="ugi-uv-BoK"/>
@@ -1495,7 +1495,7 @@
         </menu>
     </objects>
     <resources>
-        <image name="0D2771D9-3013-4633-969B-31302AFE7AFA" width="450" height="420">
+        <image name="ED5E0E41-9B35-41DE-BD04-465F0A66E9DB" width="450" height="420">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOzxYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBEW
 GxwgISksLzU4VSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBzV05TQ29sb3KA
