--- a/en.lproj/MBMessageViewController.xib
+++ b/en.lproj/MBMessageViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1080" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5053"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="MBMessageViewController">
@@ -377,17 +377,17 @@
                                         </buttonCell>
                                         <connections>
                                             <action selector="showBccAddressPopover:" target="-2" id="Zft-mg-FmK"/>
-                                            <binding destination="-2" name="hidden" keyPath="self.cachedAddressesBcc.showMe" id="zLU-k4-ipX">
-                                                <dictionary key="options">
-                                                    <string key="NSValueTransformerName">NSNegateBoolean</string>
-                                                </dictionary>
-                                            </binding>
                                             <binding destination="-2" name="title" keyPath="self.cachedAddressesBcc.count" id="LUY-lv-XkH">
                                                 <dictionary key="options">
                                                     <integer key="NSNoSelectionPlaceholder" value="0"/>
                                                     <integer key="NSNotApplicablePlaceholder" value="0"/>
                                                     <integer key="NSNullPlaceholder" value="0"/>
                                                     <string key="NSValueTransformerName">MBNumberToString</string>
+                                                </dictionary>
+                                            </binding>
+                                            <binding destination="-2" name="hidden" keyPath="self.cachedAddressesBcc.showMe" id="zLU-k4-ipX">
+                                                <dictionary key="options">
+                                                    <string key="NSValueTransformerName">NSNegateBoolean</string>
                                                 </dictionary>
                                             </binding>
                                         </connections>
@@ -733,6 +733,24 @@
                     <modifierMask key="keyEquivalentModifierMask" control="YES"/>
                     <connections>
                         <action selector="showConstraints:" target="-2" id="qHy-c2-70v"/>
+                    </connections>
+                </menuItem>
+                <menuItem title="Toggle Views " id="wel-le-Qbk">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="toggleViewOutlines:" target="-2" id="ue6-qJ-gbQ"/>
+                    </connections>
+                </menuItem>
+                <menuItem title="Vertical Hugging" id="Ysn-WC-Zm4">
+                    <modifierMask key="keyEquivalentModifierMask" control="YES"/>
+                    <connections>
+                        <action selector="changeVerticalHugging:" target="-2" id="eb7-aw-MCf"/>
+                    </connections>
+                </menuItem>
+                <menuItem title="Layout Subtree" id="soP-TF-yi8">
+                    <modifierMask key="keyEquivalentModifierMask" control="YES"/>
+                    <connections>
+                        <action selector="debugLayoutSubtree:" target="-2" id="tru-2S-iFL"/>
                     </connections>
                 </menuItem>
             </items>
