--- a/en.lproj/MainMenu.xib
+++ b/en.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1080" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
@@ -81,22 +81,6 @@
                                         <action selector="cancelLoadAllAccountFolders:" target="494" id="1280"/>
                                     </connections>
                                 </button>
-                                <button toolTip="Open a portal editor" translatesAutoresizingMaskIntoConstraints="NO" id="1103">
-                                    <rect key="frame" x="964" y="2" width="20" height="20"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="20" id="d4l-lu-edg"/>
-                                        <constraint firstAttribute="width" constant="20" id="rW2-Ih-OQz"/>
-                                    </constraints>
-                                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSAddTemplate" imagePosition="overlaps" alignment="center" imageScaling="proportionallyDown" inset="2" id="1104">
-                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                        <font key="font" metaFont="system"/>
-                                    </buttonCell>
-                                    <accessibility description="Open Portal Editor" help="Add a new portal"/>
-                                    <connections>
-                                        <action selector="add:" target="1388" id="1392"/>
-                                    </connections>
-                                </button>
                                 <popUpButton toolTip="Pop up a menu to add an account or folder" translatesAutoresizingMaskIntoConstraints="NO" id="1569" userLabel="Sidebar Add Menu">
                                     <rect key="frame" x="211" y="2" width="61" height="20"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -139,6 +123,31 @@
                                     </popUpButtonCell>
                                     <accessibility description="Popup a menu to add an account or folder" help="Add a new folder or account"/>
                                 </popUpButton>
+                                <textField appearanceType="lightContent" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fmV-YW-9ax">
+                                    <rect key="frame" x="278" y="4" width="102" height="17"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Status indicator" id="Tgg-dF-9Tt">
+                                        <font key="font" metaFont="system"/>
+                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                    </textFieldCell>
+                                </textField>
+                                <button toolTip="Open a portal editor" translatesAutoresizingMaskIntoConstraints="NO" id="1103">
+                                    <rect key="frame" x="964" y="2" width="20" height="20"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="20" id="d4l-lu-edg"/>
+                                        <constraint firstAttribute="width" constant="20" id="rW2-Ih-OQz"/>
+                                    </constraints>
+                                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSAddTemplate" imagePosition="overlaps" alignment="center" imageScaling="proportionallyDown" inset="2" id="1104">
+                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                        <font key="font" metaFont="system"/>
+                                    </buttonCell>
+                                    <accessibility description="Open Portal Editor" help="Add a new portal"/>
+                                    <connections>
+                                        <action selector="add:" target="1388" id="1392"/>
+                                    </connections>
+                                </button>
                             </subviews>
                         </view>
                         <constraints>
@@ -148,12 +157,15 @@
                             <constraint firstItem="1212" firstAttribute="leading" secondItem="1077" secondAttribute="trailing" constant="9" id="9t2-hG-lpi"/>
                             <constraint firstAttribute="centerY" secondItem="1273" secondAttribute="centerY" id="Df4-TN-PKm"/>
                             <constraint firstAttribute="centerY" secondItem="1212" secondAttribute="centerY" id="LHg-Ww-NE0"/>
+                            <constraint firstAttribute="centerY" secondItem="fmV-YW-9ax" secondAttribute="centerY" id="MPv-l9-4Yn"/>
                             <constraint firstAttribute="height" constant="24" id="TUD-Qg-tlS"/>
                             <constraint firstAttribute="centerY" secondItem="1103" secondAttribute="centerY" id="U6k-aL-QFA"/>
+                            <constraint firstItem="fmV-YW-9ax" firstAttribute="leading" secondItem="1569" secondAttribute="trailing" constant="8" symbolic="YES" id="bag-9Z-5Ka"/>
                             <constraint firstItem="852" firstAttribute="leading" secondItem="1505" secondAttribute="leading" constant="20" id="byI-gw-I0D"/>
                             <constraint firstAttribute="trailing" secondItem="1103" secondAttribute="trailing" constant="40" id="etp-em-KId"/>
                             <constraint firstAttribute="centerY" secondItem="852" secondAttribute="centerY" id="knw-MO-eWz"/>
                             <constraint firstAttribute="centerY" secondItem="1569" secondAttribute="centerY" id="mQJ-hP-bBw"/>
+                            <constraint firstItem="1103" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="fmV-YW-9ax" secondAttribute="trailing" constant="8" symbolic="YES" id="rCI-jg-tys"/>
                             <constraint firstItem="1077" firstAttribute="leading" secondItem="1505" secondAttribute="leading" constant="108" id="vMZ-sp-s7j"/>
                             <constraint firstItem="1273" firstAttribute="centerX" secondItem="1077" secondAttribute="centerX" id="zxx-jc-rwq"/>
                         </constraints>
@@ -288,7 +300,7 @@
                                             <nil key="backgroundColor"/>
                                         </clipView>
                                         <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="1060">
-                                            <rect key="frame" x="0.0" y="635" width="270.99999904632568" height="16"/>
+                                            <rect key="frame" x="0.0" y="635" width="271" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                         <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="1058">
@@ -394,7 +406,7 @@
                                                                 <constraint firstAttribute="trailing" secondItem="Ovp-zj-tQH" secondAttribute="trailing" priority="200" id="mfS-Fo-ANX"/>
                                                                 <constraint firstItem="Ovp-zj-tQH" firstAttribute="leading" secondItem="5k9-DR-QWV" secondAttribute="leading" id="z5Q-Zl-mll"/>
                                                             </constraints>
-                                                            <color key="backgroundColor" patternImage="3C16E246-9D19-40D3-8CD1-814954A00C52" colorSpace="pattern"/>
+                                                            <color key="backgroundColor" patternImage="C16BA831-1EE9-4659-8AA8-5776CAAABF88" colorSpace="pattern"/>
                                                         </clipView>
                                                         <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="fzv-cM-tBI">
                                                             <rect key="frame" x="0.0" y="328" width="751" height="16"/>
@@ -579,6 +591,7 @@
                 <outlet property="preferencesWindow" destination="823" id="837"/>
                 <outlet property="selectedUserController" destination="1020" id="1046"/>
                 <outlet property="sidebarViewController" destination="1529" id="1535"/>
+                <outlet property="statusTextField" destination="fmV-YW-9ax" id="imI-M7-gTf"/>
             </connections>
         </customObject>
         <customObject id="854" customClass="MainSplitViewDelegate">
@@ -1494,7 +1507,7 @@
         </menu>
     </objects>
     <resources>
-        <image name="3C16E246-9D19-40D3-8CD1-814954A00C52" width="450" height="420">
+        <image name="C16BA831-1EE9-4659-8AA8-5776CAAABF88" width="450" height="420">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOzxYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBEW
 GxwgISksLzU4VSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBzV05TQ29sb3KA
