--- a/en.lproj/MBMessageOutlineViewController.xib
+++ b/en.lproj/MBMessageOutlineViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4511" systemVersion="13B3116" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment defaultVersion="1080" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4511"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="MBMessageOutlineViewController">
@@ -12,20 +12,18 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView horizontalHuggingPriority="666" verticalHuggingPriority="701" horizontalCompressionResistancePriority="401" verticalCompressionResistancePriority="421" translatesAutoresizingMaskIntoConstraints="NO" id="1">
             <rect key="frame" x="0.0" y="0.0" width="450" height="169"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <scrollView horizontalHuggingPriority="727" verticalHuggingPriority="749" horizontalCompressionResistancePriority="293" verticalCompressionResistancePriority="306" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oQP-21-CuW">
                     <rect key="frame" x="0.0" y="0.0" width="450" height="169"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <clipView key="contentView" horizontalHuggingPriority="712" verticalHuggingPriority="738" horizontalCompressionResistancePriority="746" verticalCompressionResistancePriority="308" id="8F8-Yt-CPh">
+                    <clipView key="contentView" horizontalHuggingPriority="712" verticalHuggingPriority="738" horizontalCompressionResistancePriority="746" verticalCompressionResistancePriority="308" misplaced="YES" id="8F8-Yt-CPh">
                         <rect key="frame" x="1" y="17" width="448" height="151"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <outlineView horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="363" verticalCompressionResistancePriority="376" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" headerView="eS5-sW-ewi" indentationPerLevel="16" autoresizesOutlineColumn="YES" outlineTableColumn="2fv-A6-H6z" id="M46-cS-F51">
-                                <rect key="frame" x="0.0" y="0.0" width="448" height="151"/>
+                                <rect key="frame" x="0.0" y="0.0" width="370" height="19"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" red="0.40000000596046448" green="0.80000001192092896" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -103,11 +101,11 @@
                         </subviews>
                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </clipView>
-                    <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" id="Ae8-NM-eg4">
+                    <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="Ae8-NM-eg4">
                         <rect key="frame" x="1" y="120" width="359" height="16"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
-                    <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" id="eVN-1t-AkW">
+                    <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="eVN-1t-AkW">
                         <rect key="frame" x="54" y="17" width="15" height="17"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
